PIRANHA-961 SLB Create Load Balancer Layout Issues and UX

--- a/site/modules/slb/static/css/main.css
+++ b/site/modules/slb/static/css/main.css
@@ -42,6 +42,10 @@
     width: 242px;
     margin-left: 37px;
 }
+.short-input {
+    width: 24px;
+    margin-left: 37px;
+}
 .group-checkable{
     margin: 0;
 }
@@ -169,6 +173,10 @@ input.ng-invalid-port{
 .hc-conf{
     margin: 0 0 -10px 0;
 }
+.section-title {
+    font-weight: bold;
+    margin-left: 7px !important;
+}
 .timeout{
     margin: 0 0 0 20px;
 }
@@ -178,14 +186,18 @@ input.ng-invalid-port{
 .hc-interval{
     line-height: 30px;
 }
-.failure-threshold{
+.two-line{
     line-height: 15px;
-    margin-left: 28px;
 }
 .table-left-border{
     border-left: 2px solid #ececec;
     padding-left: 20px;
     margin-left: 0;
+}
+.table-right-border{
+    border-right: 2px solid #ececec;
+    padding-right: 20px;
+    margin-right: 0;
 }
 .delete-btn-pos{
     margin: -20px 0 30px 10px;
